--- a/Lesson_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Lesson_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -73,7 +73,10 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/L_GameMode.L_GameMode
+OpenAssetsAtExit=/Game/Blueprints/L_Enemy.L_Enemy
+OpenAssetsAtExit=/Game/Blueprints/UI/EnemyHealthBar_Blueprint.EnemyHealthBar_Blueprint
+OpenAssetsAtExit=/Game/Blueprints/L_Hero.L_Hero
+OpenAssetsAtExit=/Game/Blueprints/UI/GamePlayScreen_Blueprint.GamePlayScreen_Blueprint
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -773,6 +776,83 @@ ObjectProperty.DefaultValueCategory=True
 ObjectProperty.Events=True
 ArrayProperty.Variable=True
 ArrayProperty.DefaultValueCategory=True
+L_SpawnPoint_C.Tick=True
+L_SpawnPoint_C.ComponentTick=True
+L_SpawnPoint_C.ComponentReplication=True
+L_SpawnPoint_C.Variable=True
+L_GameMode_C.Default=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldSettings.Broadphase=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.Tick=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+GamePlay_Blueprint_C.Appearance=True
+GamePlay_Blueprint_C.Designer=True
+GamePlay_Blueprint_C.Input=True
+GamePlay_Blueprint_C.Interaction=True
+GamePlay_Blueprint_C.Performance=True
+GamePlay_Blueprint_C.Layout=True
+GamePlay_Blueprint_C.Behavior=True
+GamePlay_Blueprint_C.Render Transform=True
+GamePlay_Blueprint_C.Accessibility=True
+GamePlay_Blueprint_C.Clipping=True
+GamePlay_Blueprint_C.Navigation=True
+GamePlay_Blueprint_C.Localization=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
+K2Node_GetClassDefaults.PinOptions=True
+WidgetComponent.Variable=True
+WidgetComponent.TransformCommon=True
+WidgetComponent.Sockets=True
+WidgetComponent.Materials=True
+WidgetComponent.UserInterface=True
+WidgetComponent.Interaction=True
+WidgetComponent.Animation=True
+WidgetComponent.Layers=True
+WidgetComponent.Physics=True
+WidgetComponent.Collision=True
+WidgetComponent.Rendering=True
+WidgetComponent.VirtualTexture=True
+WidgetComponent.Tags=True
+WidgetComponent.ComponentReplication=True
+WidgetComponent.Cooking=True
+WidgetComponent.Events=True
+K2Node_VariableSet.Events=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -867,7 +947,7 @@ SequenceBrowser.HiddenColumns=Class
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.UserInterface.DrawSize\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -881,32 +961,41 @@ BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\"
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
-EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget=
+Visual=
+WidgetComponent="\"Object.UserInterface.DrawSize\" "
+MeshComponent="\"Object.UserInterface.DrawSize\" "
+PrimitiveComponent="\"Object.UserInterface.DrawSize\" "
+SceneComponent="\"Object.UserInterface.DrawSize\" "
+ActorComponent="\"Object.UserInterface.DrawSize\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/L_GameMode
-MRUItem1=/Game/Characters/Enemy/Animations/DoHammerDamage_Blueprint
-MRUItem2=/Game/Blueprints/AI/HasValidEnemy_Decorator
-MRUItem3=/Game/Blueprints/L_Hero
-MRUItem4=/Game/Characters/Enemy/Animations/Enemy_Attack
-MRUItem5=/Game/Characters/Enemy/Enemy_Hammer
-MRUItem6=/Game/Characters/Enemy/Enemy_Skeleton
-MRUItem7=/Game/Blueprints/L_Character
-MRUItem8=/Game/Blueprints/AI/Dwarf_BehaviorTree
-MRUItem9=/Game/Blueprints/L_Enemy
-MRUItem10=/Game/Blueprints/AI/BTDecorator_BlueprintBase_New
-MRUItem11=/Game/Blueprints/AI/Enemy_BehaviorTree
-MRUItem12=/Game/Blueprints/AI/Enemy_Blueprint
-MRUItem13=/Game/Characters/Enemy/Enemy_SkelMesh
-MRUItem14=/Game/Characters/Hero/Animations/Hero_AnimBlueprint
-MRUItem15=/Game/Characters/Enemy/Animations/Enemy_AnimBlueprint
-MRUItem16=/Game/Characters/Hero/Weapons/Hero_Rifle
-MRUItem17=/Game/Characters/Hero/Hero_Skeleton
-MRUItem18=/Game/Characters/Hero/Hero_SkelMesh
-MRUItem19=/Game/Characters/Hero/Animations/Hero_Run_BlendSpace
+MRUItem0=/Game/Blueprints/L_Enemy
+MRUItem1=/Game/Blueprints/UI/EnemyHealthBar_Blueprint
+MRUItem2=/Game/Blueprints/L_Hero
+MRUItem3=/Game/Blueprints/UI/GamePlay_Blueprint
+MRUItem4=/Game/Blueprints/L_GameMode
+MRUItem5=/Game/Blueprints/L_SpawnPoint
+MRUItem6=/Game/Characters/Enemy/Animations/DoHammerDamage_Blueprint
+MRUItem7=/Game/Blueprints/AI/HasValidEnemy_Decorator
+MRUItem8=/Game/Characters/Enemy/Animations/Enemy_Attack
+MRUItem9=/Game/Characters/Enemy/Enemy_Hammer
+MRUItem10=/Game/Characters/Enemy/Enemy_Skeleton
+MRUItem11=/Game/Blueprints/L_Character
+MRUItem12=/Game/Blueprints/AI/Dwarf_BehaviorTree
+MRUItem13=/Game/Blueprints/AI/BTDecorator_BlueprintBase_New
+MRUItem14=/Game/Blueprints/AI/Enemy_BehaviorTree
+MRUItem15=/Game/Blueprints/AI/Enemy_Blueprint
+MRUItem16=/Game/Characters/Enemy/Enemy_SkelMesh
+MRUItem17=/Game/Characters/Hero/Animations/Hero_AnimBlueprint
+MRUItem18=/Game/Characters/Enemy/Animations/Enemy_AnimBlueprint
+MRUItem19=/Game/Characters/Hero/Weapons/Hero_Rifle
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -927,6 +1016,9 @@ MRUItem19=/Game/Characters/Hero/Animations/Hero_Run_BlendSpace
 /Game/Blueprints/AI/Dwarf_BehaviorTree.Dwarf_BehaviorTree=0
 /Game/Blueprints/AI/Dwarf_Blackboard.Dwarf_Blackboard=0
 /Game/Characters/Enemy/Animations/Enemy_Attack.Enemy_Attack=0
+/Game/Blueprints/L_SpawnPoint.L_SpawnPoint=0
+/Game/Blueprints/L_GameMode.L_GameMode=0
+/Game/Blueprints/L_Enemy.L_Enemy=0
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -1771,6 +1863,8 @@ PaperRuntimeSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.
 TcpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.TUrnUp,
+K2Node_GetClassDefaults=K2Node_GetClassDefaults.PinOptions.ShowPinForProperties,
+L_Character_C=K2Node_GetClassDefaults.PinOptions.ShowPinForProperties,
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletonEditor",Commands=)
@@ -1826,11 +1920,80 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/L_Enemy.L_Enemy;
 RecentlyPlaced=/Game/Blueprints/L_SpawnPoint.L_SpawnPoint;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
-RecentlyPlaced=/Game/Blueprints/L_Enemy.L_Enemy;
 
 [MessageLog]
 LastLogListing=PIE
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+bKeyInterpPropertiesOnly=False
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bLabelBrowserVisible=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bDeleteKeysWhenTrimming=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
 
 
