Game level in progress.

--- a/Lesson_01/Config/DefaultEngine.ini
+++ b/Lesson_01/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Lesson_01
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/Maps/GamePlayMap.GamePlayMap
+GameDefaultMap=/Game/Maps/GamePlayMap.GamePlayMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
