River and water material.

--- a/Lesson_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Lesson_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -72,7 +72,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/Maps/GamePlayMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -928,6 +928,56 @@ Button.Clipping=True
 Button.Navigation=True
 Button.Localization=True
 Button.Events=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionAdd.MaterialExpressionAdd=True
+MaterialExpressionAdd.MaterialExpression=True
+MaterialExpressionReflectionVectorWS.UMaterialExpressionReflectionVectorWS=True
+MaterialExpressionReflectionVectorWS.MaterialExpression=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionPanner.MaterialExpressionPanner=True
+MaterialExpressionPanner.MaterialExpression=True
+MaterialExpressionComponentMask.MaterialExpressionComponentMask=True
+MaterialExpressionComponentMask.MaterialExpression=True
+LandscapeSplineControlPoint.LandscapeSpline=True
+LandscapeSplineControlPoint.LandscapeDeformation=True
+LandscapeSplineControlPoint.Mesh=True
+LandscapeSplineControlPoint.VirtualTexture=True
+LandscapeSplineControlPoint.Collision=True
+LandscapeSplineSegment.LandscapeSpline=True
+LandscapeSplineSegment.LandscapeSplineSegment=True
+LandscapeSplineSegment.LandscapeDeformation=True
+LandscapeSplineSegment.LandscapeSplineMeshes=True
+LandscapeSplineSegment.VirtualTexture=True
+LandscapeSplineSegment.Collision=True
+PaintBrushSettings.Brush=True
+PaintBrushSettings.View=True
+PaintModeSettings.VertexPainting=True
+PaintModeSettings.Visualization=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1053,28 +1103,34 @@ MeshComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
+MaterialExpressionConstant3Vector="\"Object.Constant\" "
+MaterialExpression=
+PreviewMaterial="\"Object.Group Sorting.ParameterGroupData\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" \"Object.Lightmass.LightmassSettings\" "
+Material="\"Object.Group Sorting.ParameterGroupData\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" \"Object.Lightmass.LightmassSettings\" "
+MaterialInterface="\"Object.Group Sorting.ParameterGroupData\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" \"Object.Lightmass.LightmassSettings\" "
+LandscapeSplineSegment="\"Object.LandscapeSplineSegment\" \"Object.LandscapeSplineMeshes\" \"Object.LandscapeSplineMeshes.SplineMeshes\" \"Object.LandscapeSplineMeshes.SplineMeshes.SplineMeshes[0]\" \"Object.LandscapeSplineMeshes.SplineMeshes.SplineMeshes[0].MaterialOverrides\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/L_Hero
-MRUItem1=/Game/Blueprints/UI/EndGameSceen_Blueprint
-MRUItem2=/Game/Blueprints/L_Enemy
-MRUItem3=/Game/Blueprints/UI/EnemyHealthBar_Blueprint
-MRUItem4=/Game/Blueprints/UI/GamePlay_Blueprint
-MRUItem5=/Game/Blueprints/L_GameMode
-MRUItem6=/Game/Blueprints/L_SpawnPoint
-MRUItem7=/Game/Characters/Enemy/Animations/DoHammerDamage_Blueprint
-MRUItem8=/Game/Blueprints/AI/HasValidEnemy_Decorator
-MRUItem9=/Game/Characters/Enemy/Animations/Enemy_Attack
-MRUItem10=/Game/Characters/Enemy/Enemy_Hammer
-MRUItem11=/Game/Characters/Enemy/Enemy_Skeleton
-MRUItem12=/Game/Blueprints/L_Character
-MRUItem13=/Game/Blueprints/AI/Dwarf_BehaviorTree
-MRUItem14=/Game/Blueprints/AI/BTDecorator_BlueprintBase_New
-MRUItem15=/Game/Blueprints/AI/Enemy_BehaviorTree
-MRUItem16=/Game/Blueprints/AI/Enemy_Blueprint
-MRUItem17=/Game/Characters/Enemy/Enemy_SkelMesh
-MRUItem18=/Game/Characters/Hero/Animations/Hero_AnimBlueprint
-MRUItem19=/Game/Characters/Enemy/Animations/Enemy_AnimBlueprint
+MRUItem0=/Game/Materials/M_Water
+MRUItem1=/Game/Materials/M_LandscapeMaterial
+MRUItem2=/Game/Blueprints/L_Hero
+MRUItem3=/Game/Blueprints/UI/EndGameSceen_Blueprint
+MRUItem4=/Game/Blueprints/L_Enemy
+MRUItem5=/Game/Blueprints/UI/EnemyHealthBar_Blueprint
+MRUItem6=/Game/Blueprints/UI/GamePlay_Blueprint
+MRUItem7=/Game/Blueprints/L_GameMode
+MRUItem8=/Game/Blueprints/L_SpawnPoint
+MRUItem9=/Game/Characters/Enemy/Animations/DoHammerDamage_Blueprint
+MRUItem10=/Game/Blueprints/AI/HasValidEnemy_Decorator
+MRUItem11=/Game/Characters/Enemy/Animations/Enemy_Attack
+MRUItem12=/Game/Characters/Enemy/Enemy_Hammer
+MRUItem13=/Game/Characters/Enemy/Enemy_Skeleton
+MRUItem14=/Game/Blueprints/L_Character
+MRUItem15=/Game/Blueprints/AI/Dwarf_BehaviorTree
+MRUItem16=/Game/Blueprints/AI/BTDecorator_BlueprintBase_New
+MRUItem17=/Game/Blueprints/AI/Enemy_BehaviorTree
+MRUItem18=/Game/Blueprints/AI/Enemy_Blueprint
+MRUItem19=/Game/Characters/Enemy/Enemy_SkelMesh
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -1099,6 +1155,7 @@ MRUItem19=/Game/Characters/Enemy/Animations/Enemy_AnimBlueprint
 /Game/Blueprints/L_GameMode.L_GameMode=0
 /Game/Blueprints/L_Enemy.L_Enemy=0
 /Temp/Untitled_2.Untitled_2:PersistentLevel.L_Hero_2=1
+/Game/Materials/M_LandscapeMaterial.M_LandscapeMaterial=0
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -2099,8 +2156,8 @@ bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 
 [LandscapeEdit]
-ToolStrength=0.200000
-BrushRadius=216.000000
+ToolStrength=0.291429
+BrushRadius=156.000000
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
 WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
@@ -2131,5 +2188,68 @@ IsInSingleInstantiationMode=False
 IsInSpawnInCurrentLevelMode=False
 SingleInstantiationPlacementMode=0
 UnpaintDensity=1.000000
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+
+[SuppressableDialogs]
+Warning_NoPreviewMeshFound=False
 
 
